--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.6"
 activityCompose = "1.9.2"
 composeBom = "2024.04.01"
+navigationComposeVersion = "2.5.0"
 navigationRuntimeKtx = "2.8.2"
 navigationCompose = "2.8.2"
 
